# resourcepackd

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: comp.rs  main.rs  validate.rs  watching.rs
test_pack/: pack.mcmetac
test_pack/data/test/functions/: another.mcfunction  hello_world.mcfunction
