[package]
name = "resourcepackd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpd"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
notify = "6.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
