[package]
name = "resourcepackd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpd"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-walkdir = "0.2.0"
async_zip = { version = "0.0.15", features = ["tokio", "deflate", "tokio-fs"] }
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive"] }
futures-lite = "1.13.0"
json_comments = "0.2.1"
notify = "6.0.0"
regex = "1.8.1"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "io-util",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
