[package]
name = "resourcepackd"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Maxuss <maxus.info.mail@proton.me>"]
description = "An utility for Minecraft datapack development"
repository = "https://github.com/Maxuss/resourcepackd"
keywords = ["Minecraft", "CLI"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rpd"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.71"

# Zipping resourcepack
async-walkdir = "0.2.0"
async_zip = { version = "0.0.15", features = ["tokio", "deflate", "tokio-fs"] }
regex = "1.8.1"
serde = "1.0.163"
serde_json = "1.0.96"

# CLI
clap = { version = "4.3.0", features = ["derive"] }

# Async RT
futures-lite = "1.13.0"
json_comments = "0.2.1"
tokio = { version = "1.28.1", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "io-util",
] }

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.24"
notify = "6.0.0"
